--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,18 +1,25 @@
 /* HEADER */
 
-header nav{
-    background-color: midnightblue;
-}
-.nav-link{
-    color: white!important;
-    text-decoration: none;
+header { 
+    nav{
+        background-color: midnightblue;
+        box-shadow: 0px 0px 5px 1px black;
+    }
+    .nav-link{
+        color: white!important;
+        text-decoration: none;
+        font-size: 25px;
+    }
+    .nav-item{
+        padding: 0px 20px;
+        :hover{
+            font-weight: bold;
+        }   
+    }
 }
 .active{
     font-weight: bold;
 }
-.nav-item:hover{
-    font-weight: bold;
-}   
 .navbar-toggler{
     border-color: white!important;
 }
