--- a/scss/sobremi.scss
+++ b/scss/sobremi.scss
@@ -7,6 +7,11 @@
 .imgSobreMi{
     margin: 10px 0px;
 }
-.parrafosSobreMi p{
-    font-size: 18px;
+.parrafosSobreMi{
+    p{
+        font-size: 18px;
+    }
+    a{
+        font-size: 18px;
+    }
 }
