--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -14,6 +14,9 @@ footer{
     .list-unstyled li:hover{
         transform: scale(1.2);
     }
+    h5{
+        font-weight: bold;
+    }
 }
 #Footer{
     padding-top: 3rem;
