--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,7 +1,7 @@
 /* FOOTER*/
 
 footer{
-    background-color: midnightblue;
+    background-color: #00205B;
     color: white;
     box-shadow: 0px 0px 5px 1px black;
     .nav-link{
