--- a/scss/inicio.scss
+++ b/scss/inicio.scss
@@ -15,3 +15,23 @@
         font-size: 15px;
     }
 }
+.card-title{
+    color: #006969;
+    padding-left: 50px;
+}
+.card-text{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.card-notes{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+h3{
+    font-size: 16px; 
+}
+.imgAndy{
+max-width: 223px;
+max-height: 325.55px;
+}
