--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,7 +2,7 @@
 
 header { 
     nav{
-        background-color: midnightblue;
+        background-color: #00205B;
         box-shadow: 0px 0px 5px 1px black;
     }
     .nav-link{
