--- a/scss/generales.scss
+++ b/scss/generales.scss
@@ -21,3 +21,19 @@ html{
     text-align: left;
     margin-left: 20px;
 }
+.colorPrimario{
+    color: midnightblue;
+}
+.colorSecundario{
+    color: #006969;
+}
+.btn{
+    background-color: #006969;
+    color: white;
+    box-shadow: 0px 0px 5px 1px black;
+}
+.alignLeft{
+    text-align: left;
+    margin-right: 10px;
+    margin-bottom: 0px;
+}
