--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -28,3 +28,10 @@ footer{
 .copyRight{
     padding-top: 1.5rem;
 }
+
+.icon{
+    font-size: 1.8rem;
+}
+.icon:hover{
+    transition: transform 0.7s;
+}
