--- a/scss/inicio.scss
+++ b/scss/inicio.scss
@@ -1,8 +1,8 @@
 /************* INICIO ***************/
 /* CARDS */
 .cardMargin{
-    width: 90%;
-    margin: 5% 10% 3% 10%;
+    width: 85%;
+    margin: 7% 10% 3% 5%;
     padding: 10px;
 }
 .card{
@@ -30,9 +30,15 @@
     padding-right: 5px;
 }
 .imgAndy{
+    width: 100%;
 max-width: 223px;
 max-height: 325.55px;
+border-radius: 40%;
+margin-top: 15px;
 }
 .filaUltimas h1{
     padding-left: 40px;
+}
+.logo{
+    margin-left: 25px;
 }
