favicon + detalles responsive

--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ footer {
   align-items: center; }
 
 .imgSobreMi {
-  margin: 10px 0px; }
+  margin: 5px 0px; }
 
 .parrafosSobreMi p {
   font-size: 16.7px; }
@@ -151,6 +151,9 @@ footer {
 
 #parrafosSobreMi h4 {
   color: midnightblue; }
+
+h3 {
+  font-size: 1.5rem; }
 
 /************* BLOG ***************/
 #blog div {
