--- a/scss/sobremi.scss
+++ b/scss/sobremi.scss
@@ -9,7 +9,7 @@
     align-items: center;
 }
 .imgSobreMi{
-    margin: 10px 0px;
+    margin: 5px 0px;
 }
 .parrafosSobreMi{
     p{
@@ -23,4 +23,8 @@
     h4{
         color: midnightblue;
     }
+}
+
+h3{
+    font-size: 1.5rem;
 }
