agregando contenido, mediaquerys y algo mas

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -27,7 +27,12 @@ body {
 /**
  * Render the `main` element consistently in IE.
  */
-
+h1 {
+  font-size: 30px;
+}
+h3{
+  font-size: 24px;
+}
 main {
   display: block;
 }
