--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -5,6 +5,9 @@
     border: 2px solid lightgray;
     padding: 30px;
     margin: auto;
+    h3{
+        font-size: 24px;
+    }
     label{
         margin-bottom: 5px;
         margin-top: 10px;
