--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,12 +10,16 @@ header {
         text-decoration: none;
         font-size: 25px;
     }
+    .nav-link:hover{
+        color: gray!important;
+    }
     .nav-item{
         padding: 0px 20px;
     }
 }
 .active{
     font-weight: bold;
+    color: lightgray!important;
 }
 .navbar-toggler{
     border-color: white!important;
