--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ footer {
 
 .card-title {
   color: #006969;
-  padding-left: 50px; }
+  padding-left: 50px;
+  font-size: 2rem; }
 
 .card-text {
   padding-left: 50px;
@@ -157,7 +158,8 @@ footer {
 
 @media only screen and (max-width: 480px) {
   .card-title {
-    padding: 0; }
+    padding: 0;
+    font-size: 1.2rem; }
   .sinPadding {
     padding: 0; }
   .cardMargin {
@@ -335,6 +337,10 @@ h3 {
     margin-top: 20px; }
   #charlas {
     margin: 0; } }
+
+@media only screen and (max-width: 480px) {
+  .tituloServicios {
+    font-size: 1.3rem; } }
 
 /************* CONTACTO ***************/
 #containerContacto {
