--- a/scss/servicios.scss
+++ b/scss/servicios.scss
@@ -51,3 +51,8 @@
         margin:0;
     }
 }
+@media only screen and (max-width: 480px){
+    .tituloServicios{
+        font-size: 1.3rem;
+    }
+}
