--- a/scss/generales.scss
+++ b/scss/generales.scss
@@ -12,6 +12,9 @@ html{
     margin-top: 10px;
     margin-bottom: 40px;
 }
+.italicFont{
+    font-style: italic;
+}
 .paddingLeft{
     padding-left: 50px;
 }
@@ -24,6 +27,9 @@ html{
 .tituloSeccion{
     text-align: left;
     margin-left: 20px;
+}
+.marginDivBtn{
+    margin-top: 20px;
 }
 .colorPrimario{
     color: midnightblue;
