--- a/scss/inicio.scss
+++ b/scss/inicio.scss
@@ -92,6 +92,9 @@
    .marginTopMobile{
        margin-top: 40px;
    }
+   #containerContacto h3{
+       font-size: 1.4rem!important;
+   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1023px){
     .card-title{
@@ -124,6 +127,12 @@
    .marginTopTablet{
          margin-top: 20px;
    }
+}
+
+@media only screen and (max-width: 990px){
+    .nav-link{
+        font-size: 1rem!important;
+    }
 }
 @media only screen and (min-width: 1024px) and (max-width: 1439px){
     .card-title{
