--- a/scss/sobremi.scss
+++ b/scss/sobremi.scss
@@ -22,6 +22,11 @@
 #parrafosSobreMi{
     h4{
         color: midnightblue;
+        margin:  10px;
+    }
+    p{
+        text-align: justify;
+        margin:   10px ;
     }
 }
 h3{
