--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,8 @@ footer {
   font-size: 15px; }
 
 #notasCharlas h3 {
-  margin-left: 10px; }
+  margin-left: 10px;
+  margin-bottom: 20px; }
 
 #notasCharlas h4 {
   font-size: 18px; }
