--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -11,7 +11,7 @@
     text-align: center;
     img{
         margin-top: 10px;
-        width: 60%;
+        width: 110%;
     }
 }
 .blogCard{
@@ -20,3 +20,9 @@
 .botonNotas{
     text-align: end;
 }
+// .cardBlog{
+//     margin-left: 61px;
+//     margin-right: 61px;
+// }
+
+
