--- a/scss/header.scss
+++ b/scss/header.scss
@@ -11,7 +11,7 @@ header {
         font-size: 25px;
     }
     .nav-link:hover{
-        color:#b9dcdc!important;
+        color:#ffa947!important;
     }
     .nav-item{
         padding: 0px 20px;
