--- a/scss/servicios.scss
+++ b/scss/servicios.scss
@@ -1,6 +1,9 @@
 /************* SERVICIOS ***************/
 
 .tituloServicios{
+    margin: 15px 0px;
+}
+.tituloServicios2{
     margin: 15px 15px 25px 15px;
 }
 .imagenServicios{
