--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ footer {
 #notasCharlas h4 {
   font-size: 18px; }
 
+#notasCharlas .tituloNovedades {
+  margin-left: 35px;
+  margin-bottom: 30px; }
+
 @media only screen and (max-width: 480px) {
   .card-title {
     padding: 0;
@@ -190,6 +194,8 @@ footer {
     text-align: center; }
   .marginTopMobile {
     margin-top: 40px; }
+  #notasCharlas .tituloNovedades {
+    margin-left: 70px; }
   #containerContacto h3 {
     font-size: 1.4rem !important; } }
 
