--- a/scss/inicio.scss
+++ b/scss/inicio.scss
@@ -60,6 +60,10 @@
     h4{
         font-size: 18px;
     }
+    .tituloNovedades{
+        margin-left: 35px;
+        margin-bottom: 30px;
+    }
 }
 
 @media only screen and (max-width: 480px){
@@ -93,6 +97,15 @@
    .marginTopMobile{
        margin-top: 40px;
    }
+   
+   #notasCharlas {
+    .tituloNovedades{
+        margin-left: 70px;
+       
+    }
+}
+
+
    #containerContacto h3{
        font-size: 1.4rem!important;
    }
