--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   width: 100%;
   height: 100%; }
 
+.row {
+  margin-right: 0px;
+  margin-left: 0px; }
+
 .marginSection {
   margin-top: 100px;
   margin-bottom: 40px; }
