--- a/scss/generales.scss
+++ b/scss/generales.scss
@@ -8,10 +8,10 @@ body{
     width: 100%;
     height: 100%;
 }
-// .row{
-//     margin-right: 0px;
-//     margin-left: 0px;
-// }
+.row{
+    margin-right: 0px;
+    margin-left: 0px;
+}
 
 .marginSection{
     margin-top: 100px;
