--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ header .nav-link {
   font-size: 25px; }
 
 header .nav-link:hover {
-  color: #ffa947 !important; }
+  color: #A2F9DE !important; }
 
 header .nav-item {
   padding: 0px 20px; }
