ultimos cambios mobile

--- a/scss/generales.scss
+++ b/scss/generales.scss
@@ -47,6 +47,7 @@ body{
     color: #006969;
 }
 .btn{
+    margin: 0.3rem;
     background-color: #006969;
     color: white;
     box-shadow: 0px 0px 5px 1px black;
