--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
   color: #006969; }
 
 .btn {
+  margin: 0.3rem;
   background-color: #006969;
   color: white;
   box-shadow: 0px 0px 5px 1px black; }
@@ -177,6 +178,8 @@ footer {
     font-size: 1.2rem; }
   .sinPadding {
     padding: 0; }
+  .card {
+    width: 16rem !important; }
   .cardMargin {
     width: 100%;
     margin: 0;
@@ -197,6 +200,24 @@ footer {
   #containerContacto h3 {
     font-size: 1.4rem !important; } }
 
+@media only screen and (max-width: 767px) {
+  .sinPadding {
+    padding: 0; }
+  .card-text {
+    padding-left: 1px;
+    padding-right: 1px;
+    text-align: justify; }
+  .cardMargin {
+    width: 100%;
+    margin: 0;
+    padding: 0px;
+    justify-content: center; }
+  .centrarImg {
+    text-align: center; }
+  .btnTexto {
+    margin-right: 0;
+    margin-top: 10px; } }
+
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .card-title {
     padding: 0; }
@@ -211,7 +232,8 @@ footer {
     text-align: justify;
     margin: 0; }
   .btnTexto {
-    margin: 0; }
+    margin-right: 0;
+    margin-top: 10px; }
   .marginSection {
     margin-top: 90px; }
   .centrarImg {
@@ -225,7 +247,9 @@ footer {
   .nav-link {
     font-size: 1rem !important; }
   nav .container-fluid {
-    width: 100% !important; } }
+    width: 100% !important; }
+  .sinPaddingMobile {
+    padding: 0px; } }
 
 @media only screen and (min-width: 1024px) and (max-width: 1439px) {
   .card-title {
@@ -402,8 +426,9 @@ h3 {
     border-radius: 8px; }
   #containerContacto .enviarForm {
     padding: 10px;
-    margin-left: 80%;
     font-weight: bold; }
+  #containerContacto .divBtnForm {
+    text-align: right; }
 
 #fs-frm-inputs {
   display: flex;
