--- a/scss/contacto.scss
+++ b/scss/contacto.scss
@@ -25,8 +25,10 @@
     }
     .enviarForm{
         padding: 10px;
-        margin-left: 80%;
         font-weight: bold;
+    }
+    .divBtnForm{
+        text-align: right;
     }
 }
 #fs-frm-inputs{
