--- a/scss/inicio.scss
+++ b/scss/inicio.scss
@@ -70,7 +70,7 @@
     .sinPadding{
         padding: 0;
     }
-    .card{
+    .cardInicio{
         width: 16rem!important;
     }
     .cardMargin{
@@ -100,6 +100,11 @@
    #containerContacto h3{
        font-size: 1.4rem!important;
    }
+}
+@media only screen and (min-width: 480px) and (max-width: 767px){
+    .cardInicio{
+        margin-bottom: 20px;
+    }
 }
 @media only screen and (max-width: 767px){
     .sinPadding{
